--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@studio-freight/react-lenis": "0.0.40",
+    "@types/gsap": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "3.12.4",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
