--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@studio-freight/react-lenis": "0.0.40",
     "@types/gsap": "^3.0.0",
     "class-variance-authority": "^0.7.1",
