--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/gsap": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gsap": "3.12.4",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
