--- a/package.json
+++ b/package.json
@@ -12,30 +12,22 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@types/gsap": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "gsap": "3.12.4",
     "lucide-react": "^0.546.0",
-    "motion": "^12.23.24",
     "next": "16.0.7",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "baseline-browser-mapping": "^2.9.4",
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
   "overrides": {
